Adding new V1 samples for Core coverage